--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,9 @@
 body 
 {
-    color:#171412;
+    color:#000000;
     background-color: #f9f6e2;
-    font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    font-family: cursive;
 }
 
 /* Introduction Class CSS */
@@ -123,7 +123,7 @@ body
 /* Links CSS */
 a:link
 {
-    background-color: #948b82;
+
     background-size: 200px 100px;
     color: #171412;
     text-decoration: none;
