--- a/HTML/Css/Style.css
+++ b/HTML/Css/Style.css
@@ -7,7 +7,15 @@ body
 }
 
 /* Introduction Class CSS */
-.IntChaptersClass 
+.IntChapterIClass 
+{
+    justify-content: space-between;
+    display: inline-block;
+    list-style-type: none;
+    padding: 16px;
+    text-align: left;
+}
+.IntChapterIIClass
 {
     justify-content: space-between;
     display: inline-block;
@@ -31,8 +39,8 @@ body
 .IntDeviantArtClass
 {
     position: relative;
-    width: 10%;
-    right: 0%;
+    width: 0%;
+    right: 10%;
     justify-content: space-between;
     display: inline-block;
     list-style-type: none;
@@ -58,6 +66,12 @@ body
         color:#bec98f;
         font-family: cursive;
     } 
+.UlIn
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}    
 
 /* Chapter Class CSS */
 .ChIntroductionClass 
